# chat-gpt-slack-bot

./: .gitignore  Dockerfile  Makefile  README.md  app.py  fly.toml  pyproject.toml
.github/workflows/: deploy-to-production.yml
